// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutUs: Match Snapshots 1 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "backgroundColor": "#FFF",
      },
    ]
  }
>
  <ScrollViewMock>
    <AppHeader
      navigation={[MockFunction]}
      primaryColor="#009CFF"
      theme={
        Object {
          "background": "#FFF",
          "color": "#17212D",
          "isDark": false,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Roboto-Light",
              "paddingHorizontal": 20,
            },
            Object {
              "color": "#17212D",
            },
          ]
        }
      >
        This project was developed by me as a way to learn React Native. It is a complete rewrite of the my university project, which was written in Ionic (Apache Cordova). This mobile application allow you, the user, to encode image with text using steganography algorithms.
      </Text>
    </View>
    <View>
      <AboutList
        backgroundColor="#FFF"
        color="#17212D"
        items={
          Array [
            Object {
              "icon": Object {
                "color": "#009CFF",
                "name": "versions",
                "type": "octicon",
              },
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
              "title": "Version 1.0.0-beta.6",
=======
              "title": "Version 1.0.0-beta.4",
>>>>>>> 8111df8... Added extra logging
=======
              "title": "Version 1.0.0-beta.5",
>>>>>>> cbb2597... :bug: Fixed Notch in Android
=======
=======
>>>>>>> 72da32f... :bug: Fixed Notch in Android
              "title": "Version 1.0.0-beta.5",
=======
              "title": "Version 1.0.0-beta.4",
>>>>>>> 7a75f16... Added extra logging
<<<<<<< HEAD
>>>>>>> f94da09... Added extra logging
=======
=======
              "title": "Version 1.0.0-beta.5",
>>>>>>> 172e2a2... :bug: Fixed Notch in Android
>>>>>>> 72da32f... :bug: Fixed Notch in Android
              "url": "https://github.com/hmajid2301/Stegappasaurus",
            },
            Object {
              "icon": Object {
                "color": "#F50AE1",
                "name": "code-fork",
                "type": "font-awesome",
              },
              "title": "Fork this Project on GitHub",
              "url": "https://github.com/hmajid2301/Stegappasaurus",
            },
            Object {
              "icon": Object {
                "color": "#FF9501",
                "name": "gitlab",
                "type": "font-awesome",
              },
              "title": "Personal GitLab",
              "url": "https://gitlab.com/hmajid2301",
            },
            Object {
              "icon": Object {
                "color": "#4CDA64",
                "name": "web",
                "type": "material-community",
              },
              "title": "Personal Website",
              "url": "https://hmajid2301.github.io",
            },
            Object {
              "function_to_call": "store",
              "icon": Object {
                "color": "#FD3C2D",
                "name": "rate-review",
                "type": "material",
              },
              "title": "Rate the App",
            },
          ]
        }
      />
    </View>
  </ScrollViewMock>
</View>
`;

exports[`AboutUs: Match Snapshots 2 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "backgroundColor": "#17212D",
      },
    ]
  }
>
  <ScrollViewMock>
    <AppHeader
      navigation={[MockFunction]}
      primaryColor="#009CFF"
      theme={
        Object {
          "background": "#17212D",
          "color": "#FFF",
          "isDark": true,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Roboto-Light",
              "paddingHorizontal": 20,
            },
            Object {
              "color": "#FFF",
            },
          ]
        }
      >
        This project was developed by me as a way to learn React Native. It is a complete rewrite of the my university project, which was written in Ionic (Apache Cordova). This mobile application allow you, the user, to encode image with text using steganography algorithms.
      </Text>
    </View>
    <View>
      <AboutList
        backgroundColor="#17212D"
        color="#FFF"
        items={
          Array [
            Object {
              "icon": Object {
                "color": "#009CFF",
                "name": "versions",
                "type": "octicon",
              },
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
              "title": "Version 1.0.0-beta.6",
=======
              "title": "Version 1.0.0-beta.4",
>>>>>>> 8111df8... Added extra logging
=======
              "title": "Version 1.0.0-beta.5",
>>>>>>> cbb2597... :bug: Fixed Notch in Android
=======
=======
>>>>>>> 72da32f... :bug: Fixed Notch in Android
              "title": "Version 1.0.0-beta.5",
=======
              "title": "Version 1.0.0-beta.4",
>>>>>>> 7a75f16... Added extra logging
<<<<<<< HEAD
>>>>>>> f94da09... Added extra logging
=======
=======
              "title": "Version 1.0.0-beta.5",
>>>>>>> 172e2a2... :bug: Fixed Notch in Android
>>>>>>> 72da32f... :bug: Fixed Notch in Android
              "url": "https://github.com/hmajid2301/Stegappasaurus",
            },
            Object {
              "icon": Object {
                "color": "#F50AE1",
                "name": "code-fork",
                "type": "font-awesome",
              },
              "title": "Fork this Project on GitHub",
              "url": "https://github.com/hmajid2301/Stegappasaurus",
            },
            Object {
              "icon": Object {
                "color": "#FF9501",
                "name": "gitlab",
                "type": "font-awesome",
              },
              "title": "Personal GitLab",
              "url": "https://gitlab.com/hmajid2301",
            },
            Object {
              "icon": Object {
                "color": "#4CDA64",
                "name": "web",
                "type": "material-community",
              },
              "title": "Personal Website",
              "url": "https://hmajid2301.github.io",
            },
            Object {
              "function_to_call": "store",
              "icon": Object {
                "color": "#FD3C2D",
                "name": "rate-review",
                "type": "material",
              },
              "title": "Rate the App",
            },
          ]
        }
      />
    </View>
  </ScrollViewMock>
</View>
`;
